--- a/index.html
+++ b/index.html
@@ -18,18 +18,7 @@
         </nav>
     </header>
     <main>
-        <section class="home">
-            <div class="home-text">
-                <h4 class="text-h4">AVISO! - ÚLTIMO DIA COM DESCONTO</h4>
-                <p>De: R$ 1.326,00</p>
-                <h1 class="text-h1">Por: 12x 29,64</h1>
-                <h2>ou à vista por R$ 297,00</h2>
-                <a href="https://go.hotmart.com/I75814963U" class="home-btn">Clique aqui e conheça o curso</a>
-            </div>
-            <div class="home-img">
-                <img src="img/home.png" alt="home">
-            </div>
-        </section>
+
         <section class="home">
 
             <div class="home-img">
@@ -49,8 +38,8 @@
                     cachorro, que nunca tenha tido um ou até mesmo não tenha muito tempo para o seu cão, que é possível
                     ter um cachorro perfeito!
                 </p>
-                <h2>Faça parte desse time.</h2>
-                <a href="https://go.hotmart.com/I75814963U" class="home-btn">Clique aqui e conheça o curso</a>
+              
+                <a href="https://go.hotmart.com/I75814963U" class="home-btn">Clique aqui e faça parte desse time</a>
             </div>
         </section>
 
