--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
                 <p>Meu nome é Bernardo Repsold, conhecido nas redes sociais como Bernardo Adestra. Eu sou Médico
                     Veterinário e trabalho com adestramento de cães a mais de 5 anos.
 
-                    Em todos esses anos trabalhando com cães já adestrei mais de 1000 cães e ajudei milhares de famílias
+                 <p>Em todos esses anos trabalhando com cães já adestrei mais de 1000 cães e ajudei milhares de famílias
                     a terem mais qualidade de vida com os seus cães.
 
-                    Foram muitos anos de estudo, muitos erros e acertos até eu chegar aonde cheguei e desenvolver o meu
+                  <p>Foram muitos anos de estudo, muitos erros e acertos até eu chegar aonde cheguei e desenvolver o meu
                     curso online Cão Bem Resolvido, focado em resultados rápidos, no qual eu consigo adestrar cães a
                     ficarem super educados em até 14 dias! Minha missão é te mostrar mesmo que você não saiba nada sobre
                     cachorro, que nunca tenha tido um ou até mesmo não tenha muito tempo para o seu cão, que é possível
                     ter um cachorro perfeito!
                 </p>
               
-                <a href="https://go.hotmart.com/I75814963U" class="home-btn">Clique aqui e faça parte desse time</a>
+                <p><a href="https://go.hotmart.com/I75814963U" class="home-btn">Clique aqui e faça parte desse time</a></p>
             </div>
         </section>
 
