--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     ficarem super educados em até 14 dias! Minha missão é te mostrar mesmo que você não saiba nada sobre
                     cachorro, que nunca tenha tido um ou até mesmo não tenha muito tempo para o seu cão, que é possível
                     ter um cachorro perfeito!
-                </p>
-              
-                <p><a href="https://go.hotmart.com/I75814963U" class="home-btn">Clique aqui e faça parte desse time</a></p>
+                <br/><br/><br/>
+
+                <a href="https://go.hotmart.com/I75814963U" class="home-btn">Clique aqui e faça parte desse time</a></p>
             </div>
         </section>
 
