--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     ter um cachorro perfeito!
                 <br/><br/><br/>
 
-                <p><a href="https://go.hotmart.com/I75814963U" class="home-btn">Clique aqui e faça parte desse time</a></p>
+                <p><a href="https://go.hotmart.com/I75814963U" class="home-btn">Clique aqui e sabia mais</a></p>
             </div>
         </section>
 
